--- a/autumn-statement.html
+++ b/autumn-statement.html
@@ -4,19 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Alexander Beuge's Portfolio">
+    <meta name="author" content="Alexander Beuge">
+    <title>BEUGISM | Autumn Statement</title>
     <link rel="icon" href="favicon.ico">
-    <title>BEUGISM</title>
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:500" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400i,700" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic" rel="stylesheet">
-    <link href="css/font-awesome.css" rel="stylesheet">
-    <link href="css/font-awesome.min.css" rel="stylesheet">
-    <script src="js/ie-emulation-modes-warning.js"></script>
+    <link href="css/fontello.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:500|Ubuntu:400i,700" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
