--- a/contact.html
+++ b/contact.html
@@ -90,5 +90,7 @@
         </div>
       </div>
     </footer>
+    <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
