--- a/about.html
+++ b/about.html
@@ -106,7 +106,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-5 col-xs-9 col-sm-6">
-          <h1 class="beugism2">Publications</h1>
+          <h1 class="beugism2 margin-bottom">Publications</h1>
         </div>
         <div class="col-md-6 col-xs-12 col-sm-12">
           <p><bold class="beugism3">FREISTIL 6</bold> Best Of German Commercial Illustration, Germany</p>
@@ -126,7 +126,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 col-xs-8 col-sm-5">
-          <h1 class="beugism2">Education</h1>
+          <h1 class="beugism2 margin-bottom">Education</h1>
         </div>
         <div class="col-md-7 col-xs-11 col-sm-11">
           <p><bold class="beugism3">2010 </bold> Central Saint Martins, MA Communication Design – Illustration, London, UK.</p>
@@ -139,12 +139,12 @@
     </div>
     <hr class="hr-bottom">
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-color">
         <div class="row">
-          <div class="col-md-8 col-sm-6 col-xs-8">
+          <div class="col-md-8 col-sm-7 col-xs-6">
             <p class="text-muted">&copy; BEUGISM 2017. All rights reserved.</p>
           </div>
-          <div class="col-md-4 col-sm-6 col-xs-4">
+          <div class="col-md-4 col-sm-4 col-xs-6">
             <p class="text-muted text-right">
               <ul class="list-inline pull-right">
                 <li><a href="https://www.instagram.com/beugism/" target="_blank"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a></li>
