--- a/car-breakdowns.html
+++ b/car-breakdowns.html
@@ -44,7 +44,7 @@
             recovery service, Green Flag. These are the most common causes of
             breakdown misery and why we love getting behind the wheel
             to go on holiday.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-car-breakdown.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="770" width="874">
