--- a/cleaning.html
+++ b/cleaning.html
@@ -44,7 +44,7 @@
             by Nielsen shows that in nearly a quarter of UK households the man
             of the house does the majority of the domestic chores, with only
             three other countries topping this. </p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-cleaning.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="770" width="874">
