--- a/coffee.html
+++ b/coffee.html
@@ -46,7 +46,7 @@
              managing director of the food and drink market analysts Allegra
              Group has warned. This is what coffee production and consumption
              looks like around the world:</p>
-             <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+             <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-coffee-consumption.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="568" width="874">
