--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
           <hr class="contact">
           <h2>Alternatively</h2>
           <p><a href="tel:+447827523471"><i class="fa fa-mobile fa-2x" aria-hidden="true"></i>&emsp;+44 (0) 782 752 34 71</a></p>
-          <p><a href="mailto:alex@beugism.com"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i>&emsp;alex@beugism.com</a></p>
+          <p><a href="mailto:alex@beugism.com"><i class="fa fa-mail fa-lg" aria-hidden="true"></i>&emsp;alex@beugism.com</a></p>
           <p>Follow me on&ensp;
             <a href="https://www.instagram.com/beugism/" target="_blank"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a>&ensp;
             <a href="https://twitter.com/beugism" target="_blank"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>&ensp;
