--- a/desert-island.html
+++ b/desert-island.html
@@ -45,7 +45,7 @@
             been on air, the make-up of castaways and their musical choices
             has become more wide ranging, reflecting the
             burgeoning of pop culture.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-desert-island.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="574" width="874">
