--- a/drink-driving.html
+++ b/drink-driving.html
@@ -45,7 +45,7 @@
             for a high proportion of deaths on the road — but depending
             where you are driving this risk is drastically reduced,
             as these figures show.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-6 col-md-offset-1 col-xs-10 col-sm-10">
           <img src="images/beugism-drunk-driving.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="1630" width="874">
