--- a/eagles-v-drones.html
+++ b/eagles-v-drones.html
@@ -45,7 +45,7 @@
             they would consider to be prey, a spokesman said, pointing
             to a Dutch police initiative where eagles have been
             taught to seize drones.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-eaglesvdrones.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="566" width="874">
