--- a/expenses.html
+++ b/expenses.html
@@ -44,7 +44,7 @@
             The claims, generally made by the self-employed,
             should relate to expenses deemed necessary
             for working practices.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/expenses-big-beugism.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="986" width="1500">
