--- a/finland-coffee.html
+++ b/finland-coffee.html
@@ -44,7 +44,7 @@
             country with the highest coffee consumption. While the UK doesn’t
             get a look in the top 10, research shows that the average Finn
             drinks more than three-and-a-half cups a day.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-6 col-md-offset-1 col-xs-12 col-sm-12">
           <img src="images/beugism-finland-coffee.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="1631" width="874">
