--- a/general-election-2017.html
+++ b/general-election-2017.html
@@ -42,7 +42,7 @@
           <p>The Observer asked me to create character
             illustrations of the four main political
             figures to go with their coverage of the
-            general election.</p><button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            general election.</p><button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-3 col-xs-6 col-sm-6">
           <img src="images/corbyn-thumb-beugism.jpg" class="img-responsive top-images" alt="Responsive image" height="400" width="400">
