--- a/ikea.html
+++ b/ikea.html
@@ -46,7 +46,7 @@
              at its limit – or “peak curtains”, as he called it. His company
              is in a good position to cope with a levelling out
              in demand, however.</p>
-             <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+             <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-ikea-infographic.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="568" width="874">
