--- a/inews-spending-review.html
+++ b/inews-spending-review.html
@@ -41,7 +41,7 @@
           <h3 class="text-left">Client: iNews</h3>
           <p>iNews have commissioned me to illustrate the results of the 2016
             Spending Review, showing different demographics.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-spending-review.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="552" width="874">
