--- a/microchipped-dog.html
+++ b/microchipped-dog.html
@@ -44,7 +44,7 @@
             fine of up to £500. But despite the new law, Dogs Trust, the
             dog welfare charity, has found 16 per cent of dogs in the UK
             are still not microchipped.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-microchip-dog.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
