--- a/millennials.html
+++ b/millennials.html
@@ -45,7 +45,7 @@
             cent fear they will work until they die, a global survey
             of millennials carried out by the recruitment company
             Manpower Group found. </p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-6 col-md-offset-1 col-xs-10 col-sm-10">
           <img src="images/beugism-millennials.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="1458" width="874">
