--- a/mullet.html
+++ b/mullet.html
@@ -41,7 +41,7 @@
           <h3 class="text-left">Client: Style League</h3>
           <p>These illustrations were commissioned by Berlin based
             magazine Style League. They show all relevant steps for ice fishing.</p>
-            <button class="margin-bottom" onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button class="margin-bottom" onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
       </div>
       <div class="col-md-6">
