--- a/oryx.html
+++ b/oryx.html
@@ -42,7 +42,7 @@
           <p>Ink Global have commissioned me to do an infographic for ‘Oryx’,
             Air Qatar's inflight magazine. Every issue runs with a certain theme.
             This one focuses on Qatar's relationship to water.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/oryx_spread_beugism.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="671" width="1000">
