--- a/plane.html
+++ b/plane.html
@@ -50,7 +50,7 @@
             come with a hefty price tag. Here, we look at how rich travellers
             already pay for plenty of benefits over economy-class fliers,
             but at a big cost.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-plane-infographic.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="1458" width="874">
