--- a/plastic-ocean.html
+++ b/plastic-ocean.html
@@ -47,7 +47,7 @@
             our oceans each year. The incentive aims to curb the world's
             use of plastics, working with governments, businesses and
             consumers, to ensure cleaner and biodiverse oceans in future.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/plastic-ocean-beugism.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="878" width="1500">
