--- a/robot.html
+++ b/robot.html
@@ -44,7 +44,7 @@
             to mark the launch of this year’s FutureFest, an annual festival
             exploring what the future might look like, offers an intriguing
             insight into Britons’ expectations of tomorrow’s world.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-robot.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="1458" width="874">
