--- a/sewing-machine-day.html
+++ b/sewing-machine-day.html
@@ -44,7 +44,7 @@
             more than 200 years since the concept was first introduced
             to the world, making needlework easier for generations
             of seamstresses.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-sewing-machine.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
