--- a/sick-days.html
+++ b/sick-days.html
@@ -49,7 +49,7 @@
             More than two in five of the 2,000 employees questioned said their
             employer put the results of the company ahead of their health
             and wellbeing.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/sick-days-beugism.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="882" width="1000">
