--- a/style-leagu.html
+++ b/style-leagu.html
@@ -41,7 +41,7 @@
           <h3 class="text-left">Client: Style League</h3>
           <p>These illustrations were commissioned by Berlin based
             magazine Style League. They show all relevant steps for ice fishing.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-4 col-xs-12 col-sm-12">
           <img src="images/beugism-styleleague-cover.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="581" width="437">
