--- a/tax-credit-families.html
+++ b/tax-credit-families.html
@@ -43,7 +43,7 @@
             low-paid workers, with additional payments for those
             who have children. They are intended to give people
             more incentive to work and to fight child poverty.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-tax-credits-infographic.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="552" width="874">
