--- a/trump-clinton.html
+++ b/trump-clinton.html
@@ -79,7 +79,7 @@
       </div>
       <div class="col-md-12">
         <img src="images/beugism-donald-trump-infographic.png" class="img-responsive margin-top center-block margin-bottom" alt="Responsive image" height="1531" width="760">
-        <button class="margin-bottom" onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+        <button class="margin-bottom" onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
       </div>
       </div>
     </div>
