--- a/trust.html
+++ b/trust.html
@@ -43,7 +43,7 @@
             mothers than they are their fathers, according to a 12-month
             study for the National Citizenship Service which surveyed
             1,000 16- and 17-year-olds. Here’s how friends and family rated.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-6 col-md-offset-1 col-xs-10 col-sm-10">
           <img src="images/trust-beugism.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="770" width="874">
