--- a/wallaby.html
+++ b/wallaby.html
@@ -44,7 +44,7 @@
             wild in parts of Scotland and the Isle of Man, after two
             pairs were taken from a zoo in 1975. Some alien species can
             have a dramatic impact…</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism_wallaby_infographic.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
