--- a/xmas-shopping.html
+++ b/xmas-shopping.html
@@ -45,7 +45,7 @@
             of women began their shopping before December and two-thirds of
             the over-60s are already done, 75 per cent of the under-40s are
             set for a few panicky days in the shops.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-6 col-md-offset-1  col-xs-10 col-sm-10">
           <img src="images/beugism-xmas-shopping.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="1595" width="874">
