--- a/accidents.html
+++ b/accidents.html
@@ -45,7 +45,7 @@
             published today reveals. The research, carried out by Censuswide
             for the National Accident Helpline, lays bare the modern
             menaces facing the nation on a daily basis.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-accidents-infographic.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
