--- a/autumn-statement.html
+++ b/autumn-statement.html
@@ -42,7 +42,7 @@
           <p>The Guardian had commissioned me to illustrate an infographic
              on the 2016 Spending Review, showing how each sector was going
              to be affected by the new budget.</p>
-             <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+             <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/autumn-statement-beugism.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="878" width="1500">
