--- a/braking-good.html
+++ b/braking-good.html
@@ -44,7 +44,7 @@
             the locations of 10,000 policyholders who scored highest for safety
             factors such as speed, smooth acceleration and braking. Here’s
             where drivers are doing their instructors proud.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-braking-good-infographic.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="568" width="874">
