--- a/cycling.html
+++ b/cycling.html
@@ -48,7 +48,7 @@
             paper it’s written on” unless it is backed by sustained funding. The
             final strategy will be published in the summer. Here’s how the
             UK currently shapes up…</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-cycling.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
