--- a/dogs-v-cats.html
+++ b/dogs-v-cats.html
@@ -46,7 +46,7 @@
             otherwise known as the love hormone – increased by 57.2 per
             cent in dogs, but by only 12 per cent in cats, meaning dogs
             scientifically love us more. </p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-dogsvcats.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="559" width="874">
