--- a/eurovision.html
+++ b/eurovision.html
@@ -46,7 +46,7 @@
             from each country awarding a separate set of points to acts.
             With twice as many points up for grabs, the performers are
             less likely to hear the dreaded words “nul points”.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-eurovision.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
