--- a/gender.html
+++ b/gender.html
@@ -44,7 +44,7 @@
             has found. Anti-bullying charity Ditch the Label’s Gender
             Report surveyed young people aged 13 to 25 – here are some of
             the survey’s key findings.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-gender-infographic.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="575" width="874">
