--- a/gosh.html
+++ b/gosh.html
@@ -41,7 +41,7 @@
           <h3 class="text-left">Client: The Independent</h3>
           <p>This infographic highlights all the services currently offered to
             young patients at Great Ormond Street Children's Hospital.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-gosh-infographic.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="549" width="874">
