--- a/nobel-prize.html
+++ b/nobel-prize.html
@@ -43,7 +43,7 @@
             Prizes will announce the 2015 laureates. If history is anything
             to go by, they are most likely to be American men. See page 18 to
             find out who was named yesterday.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-nobel-prize-infographic.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="575" width="874">
