--- a/olive-oil.html
+++ b/olive-oil.html
@@ -45,7 +45,7 @@
             from drought and disease and a poor harvest in Spain, which produces
             the most olive oil. This could present a problem as olive oil is
             considered a staple part of the diet in many countries… </p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-olive-oil.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="584" width="874">
