--- a/procrastination.html
+++ b/procrastination.html
@@ -44,7 +44,7 @@
             who spend at least seven-and-a-half hours in the office
             each day, typically waste two-and-a-half of those hours
             procrastinating, mainly checking social media..</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-procrastination.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
