--- a/safe-cycling.html
+++ b/safe-cycling.html
@@ -45,7 +45,7 @@
             will offer advice on the purchase and maintenance of bikes
             as well as safe cycling tips and advice for those who want
             to learn to ride for the first time.</p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-safe-cycling.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
