--- a/sitting.html
+++ b/sitting.html
@@ -45,7 +45,7 @@
             also expressed concern over “poor work posture and prolonged
             sitting,” which many British office workers will
             be familiar with. </p>
-            <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-sitting.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
