--- a/sugar.html
+++ b/sugar.html
@@ -45,7 +45,7 @@
              Wright complained the proposed tax would be unfair on consumers.
              Here is a breakdown of how much sugar we consume and
              where we get it from.</p>
-             <button onclick="window.history.back()"><i class="fa fa-arrow-left" aria-hidden="true"></i> Back</button>
+             <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-sugar-infographic.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="587" width="874">
