--- a/cycling.html
+++ b/cycling.html
@@ -48,7 +48,7 @@
             paper it’s written on” unless it is backed by sustained funding. The
             final strategy will be published in the summer. Here’s how the
             UK currently shapes up…</p>
-            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
+            <button class="js-btn-back"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-cycling.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
@@ -56,12 +56,12 @@
       </div>
     </div>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-color">
         <div class="row">
-          <div class="col-md-8 col-sm-6 col-xs-8">
+          <div class="col-md-8 col-sm-7 col-xs-6">
             <p class="text-muted">&copy; BEUGISM 2017. All rights reserved.</p>
           </div>
-          <div class="col-md-4 col-sm-6 col-xs-4">
+          <div class="col-md-4 col-sm-4 col-xs-6">
             <p class="text-muted text-right">
               <ul class="list-inline pull-right">
                 <li><a href="https://www.instagram.com/beugism/" target="_blank"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a></li>
@@ -74,6 +74,6 @@
       </div>
     </footer>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
