--- a/drink-driving.html
+++ b/drink-driving.html
@@ -45,7 +45,7 @@
             for a high proportion of deaths on the road — but depending
             where you are driving this risk is drastically reduced,
             as these figures show.</p>
-            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
+            <button class="js-btn-back"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-6 col-md-offset-1 col-xs-10 col-sm-10">
           <img src="images/beugism-drunk-driving.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="1630" width="874">
@@ -53,12 +53,12 @@
       </div>
     </div>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-color">
         <div class="row">
-          <div class="col-md-8 col-sm-6 col-xs-8">
+          <div class="col-md-8 col-sm-7 col-xs-6">
             <p class="text-muted">&copy; BEUGISM 2017. All rights reserved.</p>
           </div>
-          <div class="col-md-4 col-sm-6 col-xs-4">
+          <div class="col-md-4 col-sm-4 col-xs-6">
             <p class="text-muted text-right">
               <ul class="list-inline pull-right">
                 <li><a href="https://www.instagram.com/beugism/" target="_blank"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a></li>
@@ -71,6 +71,6 @@
       </div>
     </footer>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
