--- a/eurovision.html
+++ b/eurovision.html
@@ -46,7 +46,7 @@
             from each country awarding a separate set of points to acts.
             With twice as many points up for grabs, the performers are
             less likely to hear the dreaded words “nul points”.</p>
-            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
+            <button class="js-btn-back"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-eurovision.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
@@ -54,12 +54,12 @@
       </div>
     </div>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-color">
         <div class="row">
-          <div class="col-md-8 col-sm-6 col-xs-8">
+          <div class="col-md-8 col-sm-7 col-xs-6">
             <p class="text-muted">&copy; BEUGISM 2017. All rights reserved.</p>
           </div>
-          <div class="col-md-4 col-sm-6 col-xs-4">
+          <div class="col-md-4 col-sm-4 col-xs-6">
             <p class="text-muted text-right">
               <ul class="list-inline pull-right">
                 <li><a href="https://www.instagram.com/beugism/" target="_blank"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a></li>
@@ -72,6 +72,6 @@
       </div>
     </footer>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
