--- a/inews-spending-review.html
+++ b/inews-spending-review.html
@@ -49,12 +49,12 @@
       </div>
     </div>
     <footer class="footer">
-      <div class="container">
+      <div class="container footer-color">
         <div class="row">
-          <div class="col-md-8 col-sm-6 col-xs-8">
+          <div class="col-md-8 col-sm-7 col-xs-6">
             <p class="text-muted">&copy; BEUGISM 2017. All rights reserved.</p>
           </div>
-          <div class="col-md-4 col-sm-6 col-xs-4">
+          <div class="col-md-4 col-sm-4 col-xs-6">
             <p class="text-muted text-right">
               <ul class="list-inline pull-right">
                 <li><a href="https://www.instagram.com/beugism/" target="_blank"><i class="fa fa-instagram fa-lg" aria-hidden="true"></i></a></li>
