--- a/general-election-2017.html
+++ b/general-election-2017.html
@@ -11,7 +11,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/fontello.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:500|Ubuntu:400i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600|Ubuntu:400i,700" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -42,7 +42,8 @@
           <p>The Observer asked me to create character
             illustrations of the four main political
             figures to go with their coverage of the
-            general election.</p><button class="js-btn-back"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
+            general election.</p>
+            <button class="js-btn-back"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-3 col-xs-6 col-sm-6">
           <img src="images/corbyn-thumb-beugism.jpg" class="img-responsive top-images" alt="Responsive image" height="400" width="400">
