--- a/inews-spending-review.html
+++ b/inews-spending-review.html
@@ -11,7 +11,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/fontello.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:500|Ubuntu:400i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600|Ubuntu:400i,700" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -41,7 +41,7 @@
           <h3 class="text-left">Client: iNews</h3>
           <p>iNews have commissioned me to illustrate the results of the 2016
             Spending Review, showing different demographics.</p>
-            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
+            <button class="js-btn-back"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-spending-review.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="552" width="874">
@@ -67,6 +67,6 @@
       </div>
     </footer>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
