--- a/mullet.html
+++ b/mullet.html
@@ -11,7 +11,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/fontello.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:500|Ubuntu:400i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600|Ubuntu:400i,700" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -41,7 +41,7 @@
           <h3 class="text-left">Client: Style League</h3>
           <p>These illustrations were commissioned by Berlin based
             magazine Style League. They show all relevant steps for ice fishing.</p>
-            <button class="margin-bottom" onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
+            <button class="js-btn-back margin-bottom"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
       </div>
       <div class="col-md-6">
@@ -90,6 +90,6 @@
       </div>
     </footer>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
