--- a/safe-cycling.html
+++ b/safe-cycling.html
@@ -11,7 +11,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/fontello.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:500|Ubuntu:400i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600|Ubuntu:400i,700" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -45,7 +45,7 @@
             will offer advice on the purchase and maintenance of bikes
             as well as safe cycling tips and advice for those who want
             to learn to ride for the first time.</p>
-            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
+            <button class="js-btn-back"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-9 col-xs-12 col-sm-12">
           <img src="images/beugism-safe-cycling.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="771" width="874">
@@ -71,6 +71,6 @@
       </div>
     </footer>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
