--- a/trump-clinton.html
+++ b/trump-clinton.html
@@ -11,7 +11,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/fontello.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:500|Ubuntu:400i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600|Ubuntu:400i,700" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -79,7 +79,7 @@
       </div>
       <div class="col-md-12">
         <img src="images/beugism-donald-trump-infographic.png" class="img-responsive margin-top center-block margin-bottom" alt="Responsive image" height="1531" width="760">
-        <button class="margin-bottom" onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
+        <button class="js-btn-back margin-bottom"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
       </div>
       </div>
     </div>
@@ -102,6 +102,6 @@
       </div>
     </footer>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
