--- a/trust.html
+++ b/trust.html
@@ -11,7 +11,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/sticky-footer-navbar.css" rel="stylesheet">
     <link href="css/fontello.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:500|Ubuntu:400i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600|Ubuntu:400i,700" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top">
@@ -43,7 +43,7 @@
             mothers than they are their fathers, according to a 12-month
             study for the National Citizenship Service which surveyed
             1,000 16- and 17-year-olds. Here’s how friends and family rated.</p>
-            <button onclick="window.history.back()"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
+            <button class="js-btn-back"><i class="fa fa-left-open" aria-hidden="true"></i> Back</button>
         </div>
         <div class="col-md-6 col-md-offset-1 col-xs-10 col-sm-10">
           <img src="images/trust-beugism.jpg" class="img-responsive top-images margin-bottom" alt="Responsive image" height="770" width="874">
@@ -69,6 +69,6 @@
       </div>
     </footer>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.js"></script>
   </body>
 </html>
