--- a/expenses.html
+++ b/expenses.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600|Ubuntu:400i,700" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -37,7 +37,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-xs-9 col-sm-6">
-          <h2 class="text-left top-images">Expenses</h2>
+          <h2 class="text-left">Expenses</h2>
           <h3 class="text-left">Client: iNews</h3>
           <p>The most ludicrous expenses claims seen by HM
             Revenue and Customs for 2014-15 have been revealed.
