--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+    <nav class="navbar navbar-default navbar-static-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -38,7 +38,7 @@
         <div class="row">
           <div class="col-md-4">
             <a href="expenses.html"><div class="rollover">
-              <img src="images/expenses-thumb-beugism.png" class="img-responsive top-images" alt="Responsive image" height="845" width="400">
+              <img src="images/expenses-thumb-beugism.png" class="img-responsive" alt="Responsive image" height="845" width="400">
             </div></a>
             <a href="oryx.html"><div class="rollover">
               <img src="images/DOHA-thumb2.jpg" class="img-responsive margin-top" alt="Responsive image" height="610" width="400">
@@ -72,14 +72,14 @@
         <div class="row">
           <div class="col-md-8">
             <div class="row">
-              <div class="col-xs-12 black">
+              <div class="col-xs-12">
                 <a href="trump-clinton.html"><div class="rollover">
-                  <img src="images/hillary-thumb.jpg" class="img-responsive hillary" alt="Responsive image" height="800" width="800">
+                  <img src="images/hillary-thumb.jpg" class="img-responsive hillary" alt="Responsive image" height="459" width="400">
                 </div></a>
               </div>
               <div class="col-md-6">
                 <a href="autumn-statement.html"><div class="rollover">
-                  <img src="images/beugism-disabled-guy-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="459" width="400">
+                  <img src="images/beugism-disabled-guy-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="187" width="400">
                 </div></a>
                 <a href="inews-spending-review.html"><div class="rollover">
                   <img src="images/beugism-spending-review-1-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="187" width="400">
