--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-default navbar-static-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -46,7 +46,7 @@
           </div>
           <div class="col-md-4">
             <a href="general-election-2017.html"><div class="rollover">
-              <img src="images/theresa-may-thumb-beugism.jpg" class="img-responsive top-images" alt="Responsive image" height="400" width="400">
+              <img src="images/theresa-may-thumb-beugism.jpg" class="img-responsive" alt="Responsive image" height="400" width="400">
             </div></a>
             <a href="plastic-ocean.html"><div class="rollover">
               <img src="images/octopus-thumb-beugism.jpg" class="img-responsive margin-top" alt="Responsive image" height="707" width="400">
@@ -57,7 +57,7 @@
           </div>
           <div class="col-md-4">
             <a href="autumn-statement.html"><div class="rollover">
-              <img src="images/old-lady-thumb-beugism.jpg" class="img-responsive top-images" alt="Responsive image" height="413" width="400">
+              <img src="images/old-lady-thumb-beugism.jpg" class="img-responsive" alt="Responsive image" height="413" width="400">
             </div></a>
             <a href="sick-days.html"><div class="rollover">
               <img src="images/sick-days-thumb-beugism.jpg" class="img-responsive margin-top" alt="Responsive image" height="422" width="400">
@@ -79,7 +79,7 @@
               </div>
               <div class="col-md-6">
                 <a href="autumn-statement.html"><div class="rollover">
-                  <img src="images/beugism-disabled-guy-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="187" width="400">
+                  <img src="images/beugism-disabled-guy-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="459" width="400">
                 </div></a>
                 <a href="inews-spending-review.html"><div class="rollover">
                   <img src="images/beugism-spending-review-1-thumb.jpg" class="img-responsive margin-top" alt="Responsive image" height="187" width="400">
@@ -362,6 +362,6 @@
       </div>
       </footer>
       <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-      <script src="js/bootstrap.min.js"></script>
+      <script src="js/bootstrap.js"></script>
   </body>
 </html>
