--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Montserrat:600|Ubuntu:400i,700" rel="stylesheet">
   </head>
   <body>
-    <nav class="navbar navbar-default navbar-static-top">
+    <nav class="navbar navbar-default navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -37,7 +37,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 col-xs-12 col-sm-12">
-          <img src="images/beugism-about.jpg" class="img-responsive top-images" alt="Responsive image" height="717" width="1170">
+          <img src="images/beugism-about.jpg" class="img-responsive" alt="Responsive image" height="717" width="1170">
         </div>
       </div>
     </div>
